[package]
name = "tx-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
bincode = "1.3.3"
clap = "2.33.1"
env_logger = "0.8.4"
log = { version = "0.4.14", features = ["std"] }
solana-client = "1.7.11"
solana-core = "1.7.11"
solana-program = "1.7.11"
solana-sdk = "1.7.11"
spl-token = "3.2"
spl-associated-token-account = "1.0.3"
spl-memo = "3.0.1"
statistical = "1.0"